# nova-sha512

./: Cargo.toml  README.md  genlog.sh  genlog_all.sh
examples/: sha512.rs
logs/: output_1024.txt  output_128.txt  output_16384.txt  output_2048.txt  output_256.txt  output_32768.txt  output_4096.txt  output_512.txt  output_64.txt  output_65536.txt  output_8192.txt  time_output_1024.txt  time_output_128.txt  time_output_16384.txt  time_output_2048.txt  time_output_256.txt  time_output_32768.txt  time_output_4096.txt  time_output_512.txt  time_output_64.txt  time_output_65536.txt  time_output_8192.txt
src/: circuit.rs  util.rs
