[package]
name = "nova-sha512"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = "0.24.1"
blstrs = "0.6.1"
ff = "0.12.0"
hex-literal = "0.4.1"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
pasta_curves = { version = "0.5.2", package = "fil_pasta_curves", features = ["repr-c", "serde"] }
sha2 = { version = "0.10.6", features = ["compress"] }
generic-array = "0.14.6"
hex = "0.4.3"
nova-snark = "0.20.3"
bellperson-sha512 = "0.1.0"
