[package]
name = "nova-sha512"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = { version = "0.25.0", default-features = false }
ff = "0.13.0"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
sha2 = { version = "0.10.6", features = ["compress"] }
generic-array = "0.14.6"
nova-snark = "0.22.0"
bellperson-sha512 = "0.2.0"

[dev-dependencies]
bincode = "1.3.3"
clap = "4.1.8"
flate2 = "1.0.25"
hex = "0.4.3"
